fixed page overflow, added pagination & load indicator

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,9 @@ body {
   margin: 0;
 
   height: 100%;
+  max-height: 100%;
+
+  overflow: hidden;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,9 +21,15 @@ body {
 
 #root {
   height: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
-#app-containter {
+#app {
   height: 100%;
+  overflow: hidden;
+}
+
+.app-content {
   max-height: 100%;
 }
